# agro-news

./: .gitignore  LICENSE  README.md  pyproject.toml
agro_news/: example.py  scrap.ipynb  sentiment_analyzer.py  web_scraper.py
