[tool.poetry]
name = "agro-news"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "agro_news"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.1"
nltk = "^3.8.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
transformers = "^4.37.1"
torch = "^2.1.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
sqlalchemy = "^2.0.25"
pyodbc = "^5.0.1"
pysentimiento = "^0.7.2"
accelerate = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
